--- a/src/app/academy-manager/my-profile/my-profile.component.html
+++ b/src/app/academy-manager/my-profile/my-profile.component.html
@@ -14,26 +14,32 @@
         
         <div class="col-md-3 mt-1 text-left ">
             <img class="rounded-circle center-block" style="width: auto; max-height: 200px;" alt="100x100"
-                src="https://vignette.wikia.nocookie.net/aleixo/images/7/75/Renato_disco.jpg/revision/latest?cb=20121207145720"
+                src=""
                 data-holder-rendered="true">
         </div>
 
         <div class="col-md-8 text-left mb-3 ml-3">
-            
+            <div class="row text-center">
+                <div class="col-md-12 text-right">
+                    <div><button *ngIf="isShown" type="button" class="btn btn-danger" (click)='save()'>Save</button><button type="button" class="btn btn-dark" (click)='MakeEdit()'>Editar</button>
+                    <!-- <div *ngIf="isShown"><button type="button" class="btn btn-danger" (click)='save()'>SAVE</button></div> -->
+                    </div>
+                </div>
+            </div>
             <form [formGroup]="profileForm">
                 <div> <label style="font-weight: bolder;">Nome:<input type="text" placeholder={{name}}
                             class="form-control" id="formName" formControlName="notEditable"></label> </div>
                 <div class="h-divider"></div>
-                <label style="font-weight: bolder;">Data de Nascimento:<input type="date" value={{age}} placeholder={{age}}
+                <label style="font-weight: bolder;">Data de Nascimento:<input type="date" value={{currentAccount.age}} placeholder={{age}}
                         class="form-control" id="formAge" formControlName="formAge"></label>
                 <div class="h-divider"></div>
-                <label style="font-weight: bolder;">Academic Background:<input type="text" placeholder={{academicB}} 
+                <label style="font-weight: bolder;">Academic Background:<input type="text" placeholder={{currentAccount.academicBackground}} 
                         class="form-control" id="formAcademicB" formControlName="formAcademicB"></label>
                 <div class="h-divider"></div>
-                <label style="font-weight: bolder;">Grau académico:<input type="text" placeholder={{academicDegree}}
+                <label style="font-weight: bolder;">Grau académico:<input type="text" placeholder={{currentAccount.academicDegree}}
                         class="form-control" id="formAcademicD" formControlName="formAcademicD"></label>
                 <div class="h-divider"></div>
-                <label style="font-weight: bolder;">NIF:<input type="number" placeholder={{nif}}
+                <label style="font-weight: bolder;">NIF:<input type="number" placeholder={{currentAccount.nif}}
                         class="form-control" id="formNif" formControlName="formNif"></label>
                 <div class="h-divider"></div>
             
@@ -45,10 +51,10 @@
                 <div> <label style="font-weight: bolder;">Email:<input type="text" placeholder={{email}}
                     class="form-control" id="formEmail" formControlName="notEditable"></label> </div>
                 <div class="h-divider"></div>
-                <label style="font-weight: bolder;">Linkedin:<input type="text" placeholder="{{linkedin}}"
+                <label style="font-weight: bolder;">Linkedin:<input type="text" placeholder="{{currentAccount.linkedInAdress}}"
                         class="form-control" id="formLinkedin" formControlName="formLinkedin"></label>
                 <div class="h-divider"></div>
-                <label style="font-weight: bolder;">Telemovel:<input type="text" placeholder={{phone}}
+                <label style="font-weight: bolder;">Telemovel:<input type="text" placeholder={{currentAccount.mobilePhone}}
                         class="form-control" id="formPhone" formControlName="formPhone"></label>
                 <div class="h-divider"></div>
             
@@ -56,13 +62,13 @@
             
         </div>
 
-        <div class="row text-center">
+        <!-- <div class="row text-center">
             <div class="col-md-12 text-right">
                 <div><button *ngIf="isShown" type="button" class="btn btn-danger" (click)='save()'>Save</button><button type="button" class="btn btn-dark" (click)='MakeEdit()'>Editar</button>
-                <!-- <div *ngIf="isShown"><button type="button" class="btn btn-danger" (click)='save()'>SAVE</button></div> -->
-                </div>
+                 <div *ngIf="isShown"><button type="button" class="btn btn-danger" (click)='save()'>SAVE</button></div> -->
+                <!-- </div>
             </div>
-        </div>
+        </div>  -->
 
     <!-- <div class="row text-center" >
         <div class="col-md-3 text-right" >
