--- a/src/app/academy-manager/teacher-academies/teacher-academies.component.html
+++ b/src/app/academy-manager/teacher-academies/teacher-academies.component.html
@@ -6,7 +6,8 @@
       <thead class="thead-dark">
         <tr>
           <th>Nome</th>
-          <th>Ver</th>
+          <th>Ver Academia</th>
+          <th>Ver Turma</th>
         </tr>
       </thead>
       <tbody>
@@ -14,6 +15,9 @@
           <td>{{academy.edName}}</td>
           <td>
             <button (click)="openAcademyById(academy.id)" class="btn btn-success">Ver</button>
+          </td>
+          <td>
+            <button (click)="openClassByAcademyId(academy.id)" class="btn btn-success">Ver</button>
           </td>
         </tr>
       </tbody>
