started add students to academy

--- a/src/app/academy-manager/academy-view/academy-view.component.html
+++ b/src/app/academy-manager/academy-view/academy-view.component.html
@@ -82,7 +82,7 @@
                     </table>
                 </div>
                 <div class="col-5">
-                    <p><b>Formandos</b></p>
+                    <p><b>Formandos</b><button class="btn btn-primary" (click) = "openModalAddStudent(templateAddModule)">Adicionar</button></p>
                     <table class="table table-sm table-striped">
                         <thead class="thead-dark">
                             <th></th>
