--- a/src/app/academy-manager/my-academies/my-academies.component.html
+++ b/src/app/academy-manager/my-academies/my-academies.component.html
@@ -1,91 +1,60 @@
-<div class="row">
-  <div class="md-3">
-<button type="button" class="btn btn-primary" (click)="isCollapsed = !isCollapsed"
-[attr.aria-expanded]="!isCollapsed" aria-controls="collapseBasic">Toggle collapse
-</button>
-<hr>
-<div id="collapseBasic" [collapse]="isCollapsed" [isAnimated]="true">
-<div class="well well-lg card card-block card-header">Some content</div>
-</div>
-<hr>
-<div id="collapseEvent"
-[isAnimated]="true"
-[collapse]="isCollapsed"
-(collapses)="collapses()"
-(expands)="expands()"
-(collapsed)="collapsed()"
-(expanded)="expanded()">
-</div>
+<div class="container mt-4 ml-3 mr-3" *ngIf="academy$| async as academy">
 
+  <div>
+  <h3>Bem-Vindo</h3>
+  </div>
 
+    <div>
+    <alert type="warning" class="alert-link container" dismissible="true" (onClosed)="onClosed(alert)">
+    <div id="hG"class="alert-heading">Avisos</div> 
+    <p class= "mb-0"> {{ academy.warning }} </p>
+    </alert>
+    </div>
 
+    <div id="InfoBox" class="form-inline">
+        <div class="float-left" style="width: 400px;">
+         <h5>Cliente: <span class="badge badge-secondary"> client {{ academy.client }} </span></h5>
+        <h5>Data de começo: <span class="badge badge-secondary"> startDate {{ academy.startDate }} </span></h5>
+        <h5>Nome da edição: <span class="badge badge-secondary"> edName {{ academy.edName }} </span></h5>
+      </div>
+        
+      <div class="float-left" style="width: 400px;">
+        <h5>Tipo de academia: <span class="badge badge-secondary"> academyType {{ academy.academyType }} </span></h5>
+        <h5>Data de finalização: <span class="badge badge-secondary"> endDate {{ academy.endDate }} </span></h5>
+        <h5>Status: <span class="badge badge-secondary"> status {{ academy.status }} </span></h5>
+      </div>
 
+    </div>
 
+    <div class= mt-3> 
+    <button type="button" class="btn btn-primary" (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="isCollapsed" aria-controls="collapseBasic">Links
+    </button>
+    <div class= mt-3 id="collapseBasic" [collapse]="isCollapsed" [isAnimated]="true">
+    <div class="well well-lg card card-block card-header">{{academy.usefulInfo}}</div>
+    </div>
+  </div>
 
-
-
-
-
-
-<div class="container mt-4 ml-3">
-
-<div> 
-  <h4>Bem-Vindo</h4>
-</div>
-
-<div class= "mr-5">
-<alert type="warning" class="alert-link container" dismissible="true" (onClosed)="onClosed(alert)">
-<h1 class="alert-heading">Avisos</h1> 
-<p class= "mb-0"> teste<!--{{ academy.warning }}--> </p>
-</alert>
-
-<tabset>
-  <tab heading="First tab" class="mt-2" (selectTab)="onSelect($event)">
-    <h4>Title</h4>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-      Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-      when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-  </tab>
-  <tab heading="Second tab" class="mt-2" (selectTab)="onSelect($event)">
-    <h4>Title 2</h4>
-<div class= "mr-5">
-  <ul class="list-group">
-      <!--  <H3 class="list-group-item">{{academy.usefulInfo}}</H3> -->
-    <li class="list-group-item"> </li>
-    <li class="list-group-item"></li>
-    <li class="list-group-item"></li>
-    <li class="list-group-item"></li>
-  </ul>
-</div>
-
-
-
-    <p>It has survived not only five centuries, but also the leap into electronic typesetting,
-      remaining essentially unchanged. It was popularised in the 1960s with the release of
-      Letraset sheets containing Lorem Ipsum passages</p>
-  </tab>
-</tabset>
-</div>  
-
-
-<tabset>
-  <tab heading="Static title" customClass="customClass">Static content</tab>
-  <tab *ngFor="let tabz of tabs"
-       [heading]="tabz.title"
-       [customClass]="tabz.customClass">
-    {{tabz?.content}}
-  </tab>
-</tabset>
-
-
-<div class= "mr-5">
-  <ul class="list-group">
-      <!--  <H3 class="list-group-item">{{academy.usefulInfo}}</H3> -->
-    <li class="list-group-item"> </li>
-    <li class="list-group-item"></li>
-    <li class="list-group-item"></li>
-    <li class="list-group-item"></li>
-  </ul>
-</div>
-
-
+    <div class= mt-3> 
+      <accordion [isAnimated]="true">
+        <accordion-group heading="Detalhes">
+           <table class="table" *ngFor="let module of academy?.modules" >
+          <thead class="thead-dark">
+            <tr>
+            <th scope="col">#</th>
+            <th scope="col">Modulos</th>
+            <th scope="col">Formadores</th>
+            </tr>
+        </thead>
+          <tbody>
+            <tr>
+            <th scope="row">1</th>
+            <td>TESTE {{module.name}}</td>
+            <td>teste {{module.teacher}}</td>
+            </tr> 
+          </tbody>
+        </table>
+        </accordion-group>
+     </accordion> 
+    </div>
+    </div>
