--- a/src/app/academy-manager/my-academies/my-academies.component.html
+++ b/src/app/academy-manager/my-academies/my-academies.component.html
@@ -38,7 +38,7 @@
     <div class= mt-3> 
       <accordion [isAnimated]="true">
         <accordion-group heading="Detalhes">
-           <table class="table" *ngFor="let module of academy?.modules" >
+           <table class="table" *ngFor="let module of academy?.moduleDTOs" >
           <thead class="thead-dark">
             <tr>
             <th scope="col">#</th>
