--- a/src/app/academy-manager/my-profile/my-profile.component.html
+++ b/src/app/academy-manager/my-profile/my-profile.component.html
@@ -14,7 +14,7 @@
         
         <div class="col-md-3 mt-1 text-left ">
             <img class="rounded-circle center-block" style="width: auto; max-height: 200px;" alt="100x100"
-                src=""
+                src="https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png"
                 data-holder-rendered="true">
         </div>
 
