--- a/src/app/academy-manager/admin-teachers/admin-teachers.component.html
+++ b/src/app/academy-manager/admin-teachers/admin-teachers.component.html
@@ -1,44 +1,47 @@
-<h3 class="ml-3 mt-4">Formadores</h3>
+<div class="mt-4 ml-4">
 
-<!-- Filter Fields -->
+  <h3 class="ml-4 mt-4 mb-3">Formadores</h3>
 
-  <div class="row ml-4">
-    <div class= col-6>
+  <!-- Filter Fields -->
+
+  <div class="row ml-2 mb-4">
+    <div class= col-4>
       <input name="name" #name = "ngModel" type="text" class="form-control" [(ngModel)] = "nameFilter" placeholder="Nome" (input) = "filterTable()">
     </div>
-    <ngx-select [items]="allAcademiesNames" name="academy" #academy = "ngModel" [(ngModel)] = "academyFilter" class=col-6 placeholder="Todas as Academias" (ngModelChange) = "filterTable()">
+    <ngx-select class=col-4 [items]="allAcademiesNames" name="academy" #academy = "ngModel" [(ngModel)] = "academyFilter"  placeholder="Todas as Academias" (ngModelChange) = "filterTable()">
     </ngx-select>
   </div>
 
+  <!-- Table -->
+  <div class="ml-2">
+    <table class="table table-sm table-striped container m-3 col-12 text-center" style="width: 1100px;">
+      <thead class="thead-dark">
+        <tr>
+          <th></th>
+          <th (click)="sortTable()">Nome <fa-icon [icon]="faSort"></fa-icon>
+          </th>
+          <th>Academias</th>
+          <th>Perfil</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let teacher of teacherUserAccounts$ | async; let i = index;" id="{{i}}">
+          <td class="text-center"><img alt="" class="rounded-circle"
+              [src]="teacher.teacherAccount.photoLink === null ? 'https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png' : teacher.teacherAccount.photoLink"
+              width="40"></td>
+          <td>{{teacher.teacherUser.name}}</td>
+          <td>
+            <div *ngFor="let academy of teacher.academyNames">
+              <p>{{academy}}</p>
+            </div>
+          </td>
+          <td>
+            <button (click)="showProfile(teacher.teacherUser.id)" class="btn btn-success">Ver</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-<!-- Table -->
-<div class="ml-4">
 
-  <table class="table table-sm table-striped container m-3 col-12 text-center" style="width: 1100px;">
-    <thead class="thead-dark">
-      <tr>
-        <th></th>
-        <th (click)="sortTable()">Nome <fa-icon [icon]="faSort"></fa-icon>
-        </th>
-        <th>Academias</th>
-        <th>Perfil</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let teacher of teacherUserAccounts$ | async; let i = index;" id="{{i}}">
-        <td class="text-center"><img alt="" class="rounded-circle"
-            [src]="teacher.teacherAccount.photoLink === null ? 'https://upload.wikimedia.org/wikipedia/commons/8/89/Portrait_Placeholder.png' : teacher.teacherAccount.photoLink"
-            width="40"></td>
-        <td>{{teacher.teacherUser.name}}</td>
-        <td>
-          <div *ngFor="let academy of teacher.academyNames">
-            <p>{{academy}}</p>
-          </div>
-        </td>
-        <td>
-          <button (click)="showProfile(teacher.teacherUser.id)" class="btn btn-success">Ver</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
 </div>
