--- a/src/app/academy-manager/sidebar/sidebar.component.html
+++ b/src/app/academy-manager/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column vh-100" style="background-color: grey; width: 220px; position: fixed; top: 76px;">
+<div class="d-flex flex-column vh-100" style="background-color: grey; width: 220px;">
 
     <div style="background-color: rgb(59, 59, 59); text-align: center;">
         <h5 class="my-3 mr-5" style="color: white;">Menu</h5>
