admin-academies arranjado

--- a/src/app/academy-manager/admin-academies/admin-academies.component.html
+++ b/src/app/academy-manager/admin-academies/admin-academies.component.html
@@ -1,11 +1,11 @@
-<div class="ml-4">
+<div class="ml-4 mt-1">
 
-  <div class="float-left mb-4 ml-3" style="width: 100%;">
+  <div class="float-left mb-4 ml-4" style="width: 100%;">
     <button type="button" class="btn btn-primary btn-md mt-4 float-left"
       (click)="openModalAddAcademy(templateAddAcademy)">Nova Academia</button>
   </div>
 
-  <table class="table table-sm table-striped container m-3 ml-3 col-12 text-center" style="width: 1100px;">
+  <table class="table table-sm table-striped container mt-3 ml-4 col-12 text-center" style="width: 1100px;">
     <thead class="thead-dark">
       <tr>
         <th>Nome</th>
