--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,5 @@
-<div class="mt-5 col-5 container">
+
+<div class="col-5 container" style="margin-top: 100px;">
   <div class="my-2 row text-center">
     <h5 class="col">Atualize os seus dados</h5>
   </div>
