--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,10 @@
 
-  <div class="container-fluid row mx-auto w-75 mt-5" style="position: relative; top:76px;">
-
-    <div class="container mb-4">
-      <button type="button" class="btn-borderless btn-edit" (click)="openModalAddUser(templateAddUser)">
-        <fa-icon [icon]="faUserPlus" size="2x"></fa-icon>
-      </button>
-    </div>
+<div id="adminSearchMenu" class="container-flat row mx-auto w-75 my-2">
+  <div class="container mb-4">
+    <button type="button" class="btn-borderless btn-edit" (click)="openModalAddUser(templateAddUser)">
+      <fa-icon [icon]="faUserPlus" size="2x"></fa-icon>
+    </button>
+  </div>
 
     <!-- Filter Fields -->
     <form class="col-12 mx-auto">
