--- a/src/app/academy-manager/admin-academies/admin-academies.component.html
+++ b/src/app/academy-manager/admin-academies/admin-academies.component.html
@@ -1,33 +1,41 @@
-<div class="container mb-4">
-  <button type="button" class="btn btn-primary btn-lg mt-4" (click)="openModalAddAcademy(templateAddAcademy)">Nova
-    Academia</button>
+<div class="ml-4 mt-1">
+
+  <div class="float-left mb-4 ml-4" style="width: 100%;">
+    <button type="button" class="btn btn-primary btn-md mt-4 float-left"
+      (click)="openModalAddAcademy(templateAddAcademy)">Nova Academia</button>
+  </div>
+
+  <table class="table table-sm table-striped container mt-3 ml-4 col-12 text-center" style="width: 1100px;">
+    <thead class="thead-dark">
+      <tr>
+        <th>Nome</th>
+        <th>Ver</th>
+        <th>Editar</th>
+        <th>Eliminar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let academy of academies$ | async; let i = index;" id="{{i}}">
+        <td>{{academy.edName}}</td>
+        <td>
+          <button (click)="openAcademyById(academy.id)" class="btn btn-success">Ver</button>
+        </td>
+        <td>
+          <button (click)="openModalUpdateAcademy(templateUpdateAcademy, academy)" class="btn-borderless btn-edit">
+            <fa-icon [icon]="faEdit"></fa-icon>
+          </button>
+        </td>
+        <td>
+          <button (click)="openModalConfirmDeleteAcademy(templateConfirmDeleteAcademy, i)"
+            class="btn-borderless btn-delete">
+            <fa-icon [icon]="faTrashAlt"></fa-icon>
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
 </div>
-
-<table class="table table-striped container m-3 col-12 text-center">
-  <thead class="thead-dark">
-    <tr>
-      <th>Nome</th>
-      <th>Ver</th>
-      <th>Editar</th>
-      <th>Eliminar</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let academy of academies$ | async; let i = index;" id="{{i}}">
-      <td>{{academy.edName}}</td>
-      <td>
-        <button class="btn btn-success">Ver</button>
-      </td>
-      <td>
-        <button (click)="openModalUpdateAcademy(templateUpdateAcademy, academy)" class="btn-borderless btn-edit">Editar</button>
-      </td>
-      <td>
-        <button (click)="openModalConfirmDeleteAcademy(templateConfirmDeleteAcademy, i)" class="btn-borderless btn-delete">Apagar</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
 <!-- Modal Add Academy -->
 <ng-template #templateAddAcademy>
   <div class="modal-header">
@@ -38,39 +46,41 @@
   </div>
   <div class="modal-body container">
     Preencha os dados abaixo:
-    <form class="mg-5 mt-3 container" #addAcademyForm="ngForm" (ngSubmit)="createAcademy()">
+    <form class="mg-5 mt-3 container" #addAcademyForm="ngForm" (ngSubmit)="createAcademy(datesArray.value)">
+
       <div class="form-group row">
         <label for="edName" class="col-sm-2 col-form-label">Nome:</label>
         <div class="col-sm-10">
           <input #edNameField="ngModel" [(ngModel)]="academyToCreate.edName" name="edName" id="edName" type="text"
             class="form-control" placeholder="Digite aqui o nome desta edição" required>
-          <small class="text-danger" [hidden]="edNameField.valid">Campo Obrigatório</small>
+          <small class="text-danger" [hidden]="edNameField.valid || !edNameField.touched">Campo Obrigatório</small>
         </div>
       </div>
+
       <div class="form-group row">
         <label for="academyType" class="col-sm-2 col-form-label">Tipo:</label>
         <div class="col-sm-10">
           <input #academyTypeField="ngModel" [(ngModel)]="academyToCreate.academyType" name="academyType"
             id="academyType" type="text" class="form-control" placeholder="Digite aqui o tipo desta academia" required>
-          <small class="text-danger" [hidden]="academyTypeField.valid">Campo Obrigatório</small>
+          <small class="text-danger" [hidden]="academyTypeField.valid || !academyTypeField.touched">Campo Obrigatório</small>
         </div>
       </div>
+
       <div class="form-group row">
-        <label for="startDate" class="col-sm-5 col-form-label">Data de Início:</label>
-        <div class="col-sm-7">
-          <input #startDateField="ngModel" [(ngModel)]="academyToCreate.startDate" id="startDate" name="startDate"
-            type="date" class="form-control" placeholder="Digite aqui a data de início" required>
-          <small class="text-danger" [hidden]="startDateField.valid">Campo Obrigatório</small>
+        <label for="dates" class="col-sm-2 col-form-label">Data:</label>
+        <div [formGroup]="datesForm" class="col-sm-7">
+          <input type="text" #datesArray class="form-control" formControlName="dateRange"
+            #daterangepicker="bsDaterangepicker" bsDaterangepicker
+            [bsConfig]="{ rangeInputFormat : 'YYYY-MM-DD', dateInputFormat: 'YYYY-MM-DD' }" (change)="getDates()"
+            placement="bottom" required>
+          <small class="text-danger" [hidden]="academyTypeField.valid || !academyTypeField.touched">Campo Obrigatório</small>
+        </div>
+        <div class="col-sm-1 form-group">
+          <button class="btn-sm btn-success" (click)="daterangepicker.toggle()"
+            [attr.aria-expanded]="daterangepicker.isOpen" type="button">Selecionar Datas</button>
         </div>
       </div>
-      <div class="form-group row">
-        <label for="endDate" class="col-sm-5 col-form-label">Data de Término:</label>
-        <div class="col-sm-7">
-          <input #endDateField="ngModel" [(ngModel)]="academyToCreate.endDate" id="endDate" name="endDate" type="date"
-            class="form-control" placeholder="Digite aqui a data de término" required>
-          <small class="text-danger" [hidden]="endDateField.valid">Campo Obrigatório</small>
-        </div>
-      </div>
+
       <div class="form-group row">
         <label for="client" class="col-sm-2 col-form-label">Cliente:</label>
         <div class="col-sm-10">
@@ -78,6 +88,7 @@
             class="form-control" placeholder="Digite aqui o nome do cliente">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="modules" class="col-sm-2 col-form-label">Módulos:</label>
         <div class="col-sm-10">
@@ -85,6 +96,7 @@
             class="form-control" placeholder="Digite aqui os módulos da academia">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="students" class="col-sm-2 col-form-label">Alunos:</label>
         <div class="col-sm-10">
@@ -92,6 +104,7 @@
             type="text" class="form-control" placeholder="Digite aqui os nomes dos alunos">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="warning" class="col-sm-2 col-form-label">Aviso:</label>
         <div class="col-sm-10">
@@ -99,6 +112,7 @@
             class="form-control" placeholder="Digite aqui o primeiro aviso">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="usefulInfo" class="col-sm-3 col-form-label">Informação útil:</label>
         <div class="col-sm-9">
@@ -106,6 +120,7 @@
             type="text" class="form-control" placeholder="Digite aqui informação útil">
         </div>
       </div>
+
       <div class="row">
         <button type="submit" [disabled]="!addAcademyForm.valid" class="btn btn-primary mx-auto">Criar</button>
       </div>
@@ -120,39 +135,40 @@
   </div>
   <div class="modal-body container">
     Edite os dados abaixo:
-    <form class="mg-5 mt-3 container" #updateAcademyForm="ngForm" (ngSubmit)="updateAcademy()">
+    <form class="mg-5 mt-3 container" #updateAcademyForm="ngForm" (ngSubmit)="updateAcademy(datesArray.value)">
       <div class="form-group row">
         <label for="edName" class="col-sm-2 col-form-label">Nome:</label>
         <div class="col-sm-10">
           <input #edNameField="ngModel" [(ngModel)]="academyToUpdate.edName" name="edName" id="edName" type="text"
             class="form-control" placeholder="Digite aqui o nome desta edição" required>
-          <small class="text-danger" [hidden]="edNameField.valid">Campo Obrigatório</small>
+          <small class="text-danger" [hidden]="edNameField.valid || !edNameField.touched">Campo Obrigatório</small>
         </div>
       </div>
+
       <div class="form-group row">
         <label for="academyType" class="col-sm-2 col-form-label">Tipo:</label>
         <div class="col-sm-10">
           <input #academyTypeField="ngModel" [(ngModel)]="academyToUpdate.academyType" name="academyType"
             id="academyType" type="text" class="form-control" placeholder="Digite aqui o tipo desta academia" required>
-          <small class="text-danger" [hidden]="academyTypeField.valid">Campo Obrigatório</small>
+          <small class="text-danger" [hidden]="academyTypeField.valid || !academyTypeField.touched">Campo Obrigatório</small>
         </div>
       </div>
+
       <div class="form-group row">
-        <label for="startDate" class="col-sm-5 col-form-label">Data de Início:</label>
-        <div class="col-sm-7">
-          <input #startDateField="ngModel" [(ngModel)]="academyToUpdate.startDate" id="startDate" name="startDate"
-            type="date" class="form-control" placeholder="Digite aqui a data de início" required>
-          <small class="text-danger" [hidden]="startDateField.valid">Campo Obrigatório</small>
+        <label for="dates" class="col-sm-2 col-form-label">Data:</label>
+        <div [formGroup]="datesForm" class="col-sm-7">
+          <input type="text" #datesArray class="form-control" formControlName="dateRange"
+            #daterangepicker="bsDaterangepicker" bsDaterangepicker
+            [bsConfig]="{ rangeInputFormat : 'YYYY-MM-DD', dateInputFormat: 'YYYY-MM-DD' }" (change)="getDates()"
+            placement="bottom" required>
+          <small class="text-danger" [hidden]="academyTypeField.valid || !academyTypeField.touched">Campo Obrigatório</small>
+        </div>
+        <div class="col-sm-1 form-group">
+          <button class="btn-sm btn-success" (click)="daterangepicker.toggle()"
+            [attr.aria-expanded]="daterangepicker.isOpen" type="button">Selecionar Datas</button>
         </div>
       </div>
-      <div class="form-group row">
-        <label for="endDate" class="col-sm-5 col-form-label">Data de Término:</label>
-        <div class="col-sm-7">
-          <input #endDateField="ngModel" [(ngModel)]="academyToUpdate.endDate" id="endDate" name="endDate" type="date"
-            class="form-control" placeholder="Digite aqui a data de término" required>
-          <small class="text-danger" [hidden]="endDateField.valid">Campo Obrigatório</small>
-        </div>
-      </div>
+
       <div class="form-group row">
         <label for="client" class="col-sm-2 col-form-label">Cliente:</label>
         <div class="col-sm-10">
@@ -160,6 +176,7 @@
             class="form-control" placeholder="Digite aqui o nome do cliente">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="modules" class="col-sm-2 col-form-label">Módulos:</label>
         <div class="col-sm-10">
@@ -167,6 +184,7 @@
             class="form-control" placeholder="Digite aqui os módulos da academia">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="students" class="col-sm-2 col-form-label">Alunos:</label>
         <div class="col-sm-10">
@@ -174,6 +192,7 @@
             type="text" class="form-control" placeholder="Digite aqui os nomes dos alunos">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="warning" class="col-sm-2 col-form-label">Aviso:</label>
         <div class="col-sm-10">
@@ -181,12 +200,14 @@
             class="form-control" placeholder="Digite aqui o primeiro aviso">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="usefulInfo" class="col-sm-3 col-form-label">Informação útil:</label>
         <div class="col-sm-9">
           <input #usefulInfoField="ngModel" [(ngModel)]="academyToUpdate.usefulInfo" id="usefulInfo" name="usefulInfo"
             type="text" class="form-control" placeholder="Digite aqui informação útil">
         </div>
+
       </div>
       <div class="row">
         <button type="submit" [disabled]="!updateAcademyForm.valid" class="btn btn-primary mx-auto">Atualizar</button>
