admin sidebar + teacher academy não acabado

--- a/src/app/academy-manager/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/academy-manager/admin-sidebar/admin-sidebar.component.html
@@ -6,11 +6,11 @@
 
     <ul routerLinkActive = "active" class="nav-item mt-3" style="padding-left: 10px;">
 
-            <button routerLink = "admin-academies" class="btn btn-link btn-md mx-1 my-3 " style="color: white;">Gerir Academias</button> 
+            <button routerLink = "admin-academies" id="adminAcademies" class="btn btn-link btn-md mx-1 my-3 " style="color: white;">Gerir Academias</button> 
         <br>
-            <button routerLink = "admin-students" class="btn btn-link btn-md mx-1 my-3" style="color: white;"> Gerir Formandos</button>        
+            <button routerLink = "admin-students" id="adminStudents" class="btn btn-link btn-md mx-1 my-3" style="color: white;"> Gerir Formandos</button>        
         <br>
-            <button routerLink = "admin-teachers" class="btn btn-link btn-md mx-1 my-3" style="color: white;"> Gerir Formadores</button> 
+            <button routerLink = "admin-teachers" id="adminTeachers" class="btn btn-link btn-md mx-1 my-3" style="color: white;"> Gerir Formadores</button> 
         <br>
 
     </ul>
